react-docs/src/components/products/ProductPage.module.css
.product_page_wrapper{ 
    background-color: #fffcf0; 
    gap:50px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding: 30px 0 30px 0;
}

.product_container{
    display: flex;
    gap:20px;
}

/* Imagens do produto */
.product_images_container{
    width:524px;
    max-width:524px;
    height:450px;
    max-height:450px;
    padding:10px;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap:10px;
}

.image_menu{
    width:86px;
    height:380px;
    margin:0;
    padding:0;
    display: flex;
    flex-direction: column;
    list-style: none;
    gap:10px;
}

.image_menu_btn{
    width:100%;    
    cursor: pointer;
    border:2px solid transparent;
}

.image_menu_btn:hover{
    border:2px solid #ebdeb5;
}

.main_image_container{
    width:370px;
    height:432px;
    border-radius: 4px;
    border: 8px solid #ebdeb5;
}

.main_image_container img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
/* Imagens do produto */

/* Informações do produto */
.product_info_container{
    background-color: #fff;
    width:500px;
    max-width:500px;
    height:450px;
    max-height:450px;
    border-radius: 4px;
    border: 8px solid #ebdeb5;
    padding:20px;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.product_name{
    font-size: 26px;
    font-family:'Bungee', sans-serif;
    color:black;
}

/* Tamanhos */
.size_title, .sex_title{
    font-size: 25px;
    font-family:'Bungee', sans-serif;
    color:black;
}

.size_radio_input_container,.sex_radio_input_container{
    display: flex;
    flex-direction: row;
    gap:30px;
    padding: 0px 30px 0px 30px;
}
/* Tamanhos */

/* Gênero */
.product_info_sex{
    position: relative;
}
/* Gênero */
/* Infos do produto */

/* Seção de compra */
.buy_section{
    width:100%;
    height:104px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}

.buy_price{
    font-size: 50px;
    color:black;
    text-align: center;
    margin-bottom: 0;
}
/* Seletor de quantidade */
.amount_wrapper{
    display: flex;
    align-items: center;
    gap:20px;
    margin-top: 20px;
}

.amount_counter_container{
    width:35px;
    background-color: #ebdeb5;
    border-radius: 5px;
}

.amount_title{
    font-family:'Bungee', sans-serif;
    color:black;
}

.amount_counter{
    background-color: transparent;
    font-size: 23px;
    width:45px;
    text-align: center;
    border: none;
    outline: none;
    border-radius: 5px;
}
/* Seletor de quantidade */

.buy_btn{
    font-size: 30px;
}
/* Seção de compra */

/* Outros Produtos */
.other_products_title{
    font-size: 25px;
    font-family:'Bungee', sans-serif;
    color:black;
}

.other_products_list{
    list-style: none;
    display: flex;
    gap: 20px;
    padding:0;
    margin-bottom:60px;
}
/* Outros Produtos */

